# adam

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  SYSTEM.md  adam.sh  docker-compose.yml  opencode_wrapper.py
docs/: main.typ
docs/sections/: 00-title.typ  01-intro.typ  02-spec-driven.typ  03-architecture.typ  04-ralph-loop.typ  05-corpus-fallback.typ  06-harvest.typ  07-quality.typ  08-distributed.typ  09-results.typ  10-future.typ
harvest/: Cargo.toml
harvest/src/: main.rs
scripts/: batch_push_existing.py  embed_and_push.py  show_stats.py
